calico_multi_tenants/calico1-busybox2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: calico1-busybox2
  namespace: ns-calico1
  labels:
    user: calico1
spec:
  containers:
  - image: busybox
    command:
      - sleep
      - "3600"
    imagePullPolicy: IfNotPresent
    name: busybox
  restartPolicy: Always
