calico_multi_tenants/calico2-busybox2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: calico2-busybox
  namespace: ns-calico2
  labels:
    user: calico2
spec:
  containers:
  - image: busybox
    command:
      - sleep
      - "3600"
    imagePullPolicy: IfNotPresent
    name: busybox
  restartPolicy: Always
